<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Inicio" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo1" />

    <Button
        android:id="@+id/BClientes"
        android:layout_marginTop="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/adn_clientes"/>

    <Button
        android:id="@+id/BFornecedores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BClientes"
        android:background="@drawable/adn_fornecedores"/>
    
    <Button
        android:id="@+id/BProdutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BFornecedores"
        android:background="@drawable/adn_produtos" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/BProdutos"
        android:layout_alignLeft="@+id/editText1"
        android:ems="10"
        android:text="@string/BProdutos" />

    <TextView
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/BFornecedores"
        android:layout_toRightOf="@+id/BFornecedores"
        android:ems="10"
        android:text="@string/BFornecedores" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/BClientes"
        android:layout_toRightOf="@+id/BClientes"
        android:ems="10"
        android:text="@string/BCliente" />

</RelativeLayout>